# ASSETMINT

./: .env.example  .gitignore  CLAUDE.md  CONTEXT.md  Cargo.toml  FUNCTIONALITY-REPORT.md  MANIFEST.md  Makefile  README.md  ROLLS-ROYCE-RUBRIC.md  docker-compose.demo.yml  docker-compose.tls.yml  docker-compose.yml
.github/workflows/: ci.yml
apps/dashboard-fe/: Dockerfile  next.config.ts  package-lock.json  package.json  postcss.config.mjs  tailwind.config.ts
apps/dashboard-fe/src/app/: globals.css  layout.tsx  page.tsx
apps/dashboard-fe/src/app/assets/: page.tsx
apps/dashboard-fe/src/app/astm/: page.tsx
apps/dashboard-fe/src/app/clawback/: page.tsx
apps/dashboard-fe/src/app/mint/: page.tsx
apps/dashboard-fe/src/app/reserves/: page.tsx
apps/dashboard-fe/src/app/settings/: page.tsx
apps/dashboard-fe/src/app/transfer/: page.tsx
apps/dashboard-fe/src/components/: demo-banner.tsx  disclaimer-banner.tsx  sidebar.tsx  wallet-button.tsx
apps/dashboard-fe/src/hooks/: useServiceStatus.ts
apps/dashboard-fe/src/lib/: api.ts  cn.ts  contracts.ts  ktt.ts  wallet.ts
apps/dashboard-fe/src/store/: wallet.ts
contracts/schemas/: AssetMint-1.0.json
contracts/silverscript/: clawback.json  clawback.sil  dividend.json  dividend.sil  htlc.json  htlc.sil  reserves.json  reserves.sil  rwa-core.json  rwa-core.sil  simple-spend.json  simple-spend.sil  state-verity.json  state-verity.sil  zkkyc-verifier.json  zkkyc-verifier.sil
contracts/silverscript/args/: clawback-args.json  dividend-args.json  htlc-args.json  reserves-args.json  rwa-core-args.json  simple-spend-args.json  state-verity-args.json  zkkyc-verifier-args.json
docs/: API-REFERENCE.md  ARCHITECTURE.md  CONTRACTS.md  DEMO-WALKTHROUGH.md  INVESTOR-BRIEF.md  QUICKSTART.md  SECURITY-AUDIT.md
infrastructure/dkg-node/: .env.example  Dockerfile.dkg  README.md  docker-compose.yml  start.sh
infrastructure/dkg-node/sovereign-metadata/: Dockerfile  server.js
infrastructure/nginx/: Dockerfile  nginx.conf
security/: README.md
security/audit-reports/: security-audit.md
security/formal-specs/: covenant-properties.md
services/assetmint-core/: Cargo.toml  Dockerfile
services/assetmint-core/benches/: compliance_bench.rs
services/assetmint-core/src/: api.rs  auth.rs  claims.rs  identity.rs  lib.rs  main.rs  merkle.rs  rate_limit.rs  rules.rs  zk_prover.rs  zk_verifier.rs
services/assetmint-core/tests/: e2e_cycle.rs  load_test.rs  proptest_compliance.rs
services/compliance-rust/: Cargo.toml
services/compliance-rust/src/: api.rs  claims.rs  identity.rs  lib.rs  merkle.rs  rules.rs  zk_prover.rs  zk_verifier.rs
services/oracle-pool/: Cargo.toml
services/oracle-pool/src/: attestation.rs  lib.rs  oracle.rs
services/oracle-pool/src/interfaces/: mod.rs  oracle_pool.rs
services/oracle-pool/tests/: live_attestation.rs
services/sync/: Cargo.toml
services/sync/src/: lib.rs  state_sync.rs
tokenomics/: Cargo.toml
tokenomics/src/: fee_model.rs  governance.rs  lib.rs  on_chain.rs  staking.rs  token.rs
zk-circuits/: Cargo.toml
zk-circuits/src/: kyc_circuit.rs  lib.rs  setup.rs
