# DISCLAIMER: Technical demo code — legal wrappers required in production
# SPDX-License-Identifier: MIT

[package]
name = "tokenomics"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ASTM protocol token: KRC-20 inscriptions, staking, governance, fee model"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }
