# DISCLAIMER: Technical demo code — legal wrappers required in production
# SPDX-License-Identifier: MIT

[package]
name = "assetmint-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Full Polymesh compliance port: identity, claims, rules, Groth16 ZK-KYC"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
thiserror.workspace = true
tracing.workspace = true

# Web framework
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# ZK Proofs (Groth16)
ark-groth16 = "0.5"
ark-bn254 = "0.5"
ark-relations = "0.5"
ark-std = "0.5"
ark-serialize = "0.5"
ark-ff = "0.5"
ark-ec = "0.5"
ark-snark = "0.5"

# Crypto
rand = "0.8"

# Validation
regex = "1"

# Internal
zk-circuits = { path = "../../zk-circuits" }
kaspa-adapter = { path = "../../packages/kaspa-adapter" }
sync = { path = "../sync" }
oracle-pool = { path = "../oracle-pool" }

# HTTP client (sovereign metadata service + CLI blocking)
reqwest = { version = "0.12", features = ["json", "blocking"] }

# CLI
clap = { version = "4", features = ["derive"] }
colored = "2"

# Logging
tracing-subscriber = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }
axum-test = "16"
proptest = "1.5"
criterion = { version = "0.5", features = ["html_reports"] }

[[bin]]
name = "assetmint"
path = "src/bin/cli.rs"

[[bench]]
name = "compliance_bench"
harness = false
