# DISCLAIMER: Technical demo code — legal wrappers required in production
# SPDX-License-Identifier: MIT

[package]
name = "compliance-rust"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Full Polymesh compliance port: identity, claims, rules, Groth16 ZK-KYC"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
thiserror.workspace = true
tracing.workspace = true

# Web framework
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# ZK Proofs (Groth16)
ark-groth16 = "0.5"
ark-bn254 = "0.5"
ark-relations = "0.5"
ark-std = "0.5"
ark-serialize = "0.5"
ark-ff = "0.5"
ark-ec = "0.5"

# Crypto
rand = "0.8"

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }
axum-test = "16"
