# DISCLAIMER: Technical demo code — legal wrappers required in production
# SPDX-License-Identifier: MIT

[package]
name = "oracle-pool"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Simulated centralized multisig oracle with IOraclePool upgrade stub"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
thiserror.workspace = true
tracing.workspace = true

axum = "0.8"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }
