# DISCLAIMER: Technical demo code — legal wrappers required in production
# SPDX-License-Identifier: MIT

[package]
name = "sync"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "DKG state-verity sync: monitors Knowledge Asset changes and creates state-transition UTXOs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
thiserror.workspace = true
tracing.workspace = true

reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }
